[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backlog-api-mcp-server"
version = "1.0.0"
description = "Backlog API MCP Server - Model Context Protocol server for Backlog API documentation"
authors = [{name = "Developer", email = "dev@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "httpx==0.25.2",
    "pydantic==2.5.2",
    "python-dotenv==1.0.0",
    "beautifulsoup4==4.12.2",
    "markdownify==0.11.6",
    "aiohttp==3.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.1.6",
    "mypy==1.7.1",
    "pre-commit==3.6.0",
    "types-requests==2.31.0.10",
    "types-beautifulsoup4==4.12.0.7",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
]

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function calls in argument defaults (FastAPI dependency injection)
    "A003",   # Class attribute shadows a python builtin (common in Pydantic models)
    "ARG002", # Unused method argument (common in FastAPI route handlers)
]
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Unused imports in __init__.py files
"src/config.py" = ["T20"] # Allow print statements in config for debugging
"tests/*" = ["S101", "ARG001", "ARG002"]  # Allow assert and unused args in tests

[tool.ruff.isort]
known-first-party = ["src"]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-source-first-line = false
line-ending = "auto"

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual adoption - set to true later
disallow_incomplete_defs = false  # Gradual adoption
check_untyped_defs = true
disallow_untyped_decorators = false  # FastAPI decorators
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

# FastAPI and Pydantic specific settings
[[tool.mypy.overrides]]
module = "src.*"
disallow_untyped_defs = false  # Gradual adoption for our code

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = false

# Bandit security linter configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv", "build", "dist"]
skips = ["B101"]  # Skip assert_used test (common in tests)

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]